test/test_suite/errors/expect_type_typo.c3
fn void main()
{
	boo b = true; // #error: Expected a type here. Did you perhaps want 'bool'?
}
